HTML all set-working out the get and place

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,13 +13,29 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- My CSS Style sheet location
 	<link rel="stylesheet" type="text/css" href="assets/style/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+	<div class="jumbotron">
+		<div class="container">
+			<div class="firstLineTitle">
+				<h2>Looking for a friend . . .</h2>
+			</div>
+			<div class="secondLineTitle">
+				<h2>. . . Maybe we can help.</h2>
+			</div>
+			<div class="mainTitle">
+				<h1>Find them with us!</h1>
+			  <h3>Fill out our survey questionnaire and we will match you up with someone who has similar likes.</h3>
+			</div>
+			<div class="surveyButton">
+			  <a class="btn btn-primary btn-lg" href="survey.html" role="button">Take the survey here.</a>
+			</div>
+		</div>
+	</div>
 
-
-
-
-	<!-- My JavaScript sheet location -->
-	<script src="assets/javascript/javascript.js"></script>
+	<!-- My JavaScript sheet location
+	<script src="javascript.js"></script> -->
 </body>
 </html>
