--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,13 +12,253 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- My CSS Style sheet location
 	<link rel="stylesheet" type="text/css" href="assets/style/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+	<div class="container">
+  	<div class="row">
+			<div class="required">
+				<form>
+			  	<div class="form-group">
+			    	<label for="inputName">Your First Name (Required)</label>
+			    	<input type="email" class="form-control" id="inputName" placeholder="First Name Only">
+			  	</div>
+			  	<div class="form-group">
+			    	<label for="inputLink">Link to your Photo (Required)</label>
+			    	<input type="email" class="form-control" id="inputLink" placeholder="Photo Link">
+			  	</div>
+				</form>
+			</div>
+  	</div>
+		<div class="row">
+			<div class="questions">
+				<div><h2>Answer these ten questions</h2></div>
+ 				<div class="col-md-6">
+					<div class="question1">
+						<h3>Question #1</h3>
+						<h4>How much of a "Night Owl" are you?</h4>
+					</div>
+						<label class="radio-inline">
+  							<input type="radio" name="inlineRadioOptions1" id="radio1-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+  							<input type="radio" name="inlineRadioOptions1" id="radio1-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+  							<input type="radio" name="inlineRadioOptions1" id="radio1-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions1" id="radio1-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions1" id="radio1-5" value="5"> 5
+						</label>
+					<div class="question2">
+						<h3>Question #2</h3>
+						<h4>What is your interest in sports?</h4>
+					</div>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions2" id="radio2-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions2" id="radio2-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions2" id="radio2-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions2" id="radio2-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions2" id="radio2-5" value="5"> 5
+						</label>
+					<div class="question3">
+						<h3>Question #3</h3>
+						<h4>Do you like pets?</h4>
+					</div>
+						<label class="radio-inline">
+		  					<input type="radio" name="inlineRadioOptions3" id="radio3-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+		  					<input type="radio" name="inlineRadioOptions3" id="radio3-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+		  					<input type="radio" name="inlineRadioOptions3" id="radio3-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions3" id="radio3-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions3" id="radio3-5" value="5"> 5
+						</label>
+					<div class="question4">
+						<h3>Question #4</h3>
+						<h4>Do you enjoy movies?</h4>
+					</div>
+						<label class="radio-inline">
+			  				<input type="radio" name="inlineRadioOptions4" id="radio4-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+			  				<input type="radio" name="inlineRadioOptions4" id="radio4-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+			  				<input type="radio" name="inlineRadioOptions4" id="radio4-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions4" id="radio4-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions4" id="radio4-5" value="5"> 5
+						</label>
+					<div class="question5">
+						<h3>Question #5</h3>
+						<h4>Do you like to eat in?</h4>
+					</div>
+						<label class="radio-inline">
+				  			<input type="radio" name="inlineRadioOptions5" id="radio5-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+				  			<input type="radio" name="inlineRadioOptions5" id="radio5-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+				  			<input type="radio" name="inlineRadioOptions5" id="radio5-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions5" id="radio5-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions5" id="radio5-5" value="5"> 5
+						</label>
+				</div>
+				<div class="col-md-6">
+					<div class="question6">
+						<h3>Question #6</h3>
+						<h4>Do you like physical activities?</h4>
+					</div>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions6" id="radio6-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions6" id="radio6-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions6" id="radio6-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions6" id="radio6-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions6" id="radio6-5" value="5"> 5
+						</label>
+					<div class="question7">
+						<h3>Question #7</h3>
+						<h4>Do you like live concerts?</h4>
+					</div>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions7" id="radio7-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions7" id="radio7-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions7" id="radio7-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions7" id="radio7-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions7" id="radio7-5" value="5"> 5
+						</label>
+					<div class="question8">
+						<h3>Question #8</h3>
+						<h4>How health conscious are you?</h4>
+					</div>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions8" id="radio8-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions8" id="radio8-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+	  						<input type="radio" name="inlineRadioOptions8" id="radio8-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions8" id="radio8-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions8" id="radio8-5" value="5"> 5
+						</label>
+					<div class="question9">
+						<h3>Question #9</h3>
+						<h4>Do you like to read?</h4>
+					</div>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions9" id="radio9-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions9" id="radio9-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions9" id="radio9-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions9" id="radio9-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions9" id="radio9-5" value="5"> 5
+						</label>
+					<div class="question10">
+						<h3>Question #10</h3>
+						<h4>Do you like the #1) cold or #5) hot weather?</h4>
+					</div>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions10" id="radio10-1" value="1"> 1
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions10" id="radio10-2" value="2"> 2
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions10" id="radio10-3" value="3"> 3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions10" id="radio10-4" value="4"> 4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" name="inlineRadioOptions10" id="radio10-5" value="5"> 5
+						</label>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="submit">
+				<a class="btn btn-primary btn-lg btn-block" id="submitquest" role="button">Submit your questionnaire</a>
+			</div>
+		</div>
 
+</div>
 
+<!-- Trigger the modal with a button
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#thefriend">Open Modal</button> -->
+
+<!-- Modal -->
+<div id="thefriend" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-body">
+        <h2>Frieds Name</h2>
+				<img src="" id="friendphoto" style="width: 100%; height: 100%;" >
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 	<!-- My JavaScript sheet location -->
-	<script src="assets/javascript/javascript.js"></script>
+	<script src="javascript.js"></script>
 </body>
 </html>
