--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -235,11 +235,7 @@
 				<a class="btn btn-primary btn-lg btn-block" id="submitquest" role="button">Submit your questionnaire</a>
 			</div>
 		</div>
-
 </div>
-
-<!-- Trigger the modal with a button
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#thefriend">Open Modal</button> -->
 
 <!-- Modal -->
 <div id="thefriend" class="modal fade" role="dialog">
@@ -247,8 +243,8 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body">
-        <h2>Frieds Name</h2>
-				<img src="" id="friendphoto" style="width: 100%; height: 100%;" >
+        <h2><span class="friendname">name</span></h2><h4>Would be a great friend for you!</h4>
+				<img src="" alt="Friend Here" id="friendphoto" style="width: 80%; height: 80%;" >
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -256,7 +252,6 @@
     </div>
   </div>
 </div>
-
 
 	<!-- My JavaScript sheet location -->
 	<script src="javascript.js"></script>
