--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,9 +10,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- My CSS Style sheet location
-	<link rel="stylesheet" type="text/css" href="assets/style/style.css"> -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- My CSS Style sheet location -->
+	<link rel="stylesheet" type="text/css" href="static/public/style.css">
 
 </head>
 <body>
@@ -254,6 +253,6 @@
 </div>
 
 	<!-- My JavaScript sheet location -->
-	<script src="javascript.js"></script>
+	<script src="static/public/javascript.js"></script>
 </body>
 </html>
